<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".view.PerfilEditView">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/bottomNavigationView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/perfil_titulo"
                android:textSize="30sp"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/arciform" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/perfil_nome"/>

                <EditText
                    android:id="@+id/perfil_et_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/perfil_data_nascimento"/>

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/perfil_et_data_nascimento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg"
                    android:inputType="date"
                    android:padding="8dp"
                    app:met_mask="##/##/####" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textStyle="bold"
                    android:text="@string/perfil_sexo"/>

                <RadioGroup
                    android:id="@+id/perfil_rg_sexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/perfil_edit_sexo_f"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pessoa_field_f" />

                    <RadioButton
                        android:id="@+id/perfil_edit_sexo_m"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pessoa_field_m" />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/perfil_edit_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorButton"
                android:textColor="@color/colorWhite"
                android:layout_marginVertical="18dp"
                android:text="@string/salvar"/>
        </LinearLayout>
    </ScrollView>
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_layout" />
</RelativeLayout>
