...
    <string name="welcome_text">Um aplicativo para a colaboração popular na identificação de locais de risco de transmissão da dengue e demais doenças associadas ao mosquito Aedes Aegypt.</string>

    <string name="menu_option_title">Menu</string>
    <string name="menu_option_residence_verification">"Fazer verificaçāo de residência"</string>
    <string name="menu_option_sick_person">"Cadastrar pessoa doente</string>
    <string name="menu_option_complaint">"Realizar denuncia de possivel foco"</string>
    <string name="menu_option_edit_perfil">"Editar perfil pessoal</string>
    <string name="menu_option_logout">Sair</string>
    <string name="toast_logout">"Logout realizado com sucesso"</string>

    <string name="login_title">Login</string>
    <string name="login_subtitle">Se você já possui cadastro é só inserir os dados abaixo</string>
    <string name="login_field_login">Digite seu CPF</string>
    <string name="login_field_password">Digite sua senha</string>
...

    <string name="pessoa_title">Cadastrar Morador</string>
    <string name="pessoa_field_nome">Nome</string>
    <string name="pessoa_field_cpf">CPF</string>
    <string name="pessoa_field_dataNascimento">Data de nascimento (XX/XX/XXXX)</string>
    <string name="pessoa_field_sexo">Sexo</string>
    <string name="pessoa_field_m">Masculino</string>
    <string name="pessoa_field_f">Feminino</string>
    <string name="pessoa_button">CADASTRAR</string>

    <string name="sickperson_title">Cadastrar Pessoa Doente</string>
    <string name="sickperson_field_gestante">É gestante</string>
    <string name="sickperson_enderecoButton">Cadastrar Endereço</string>
...
    <string name="perfil_email">Email:</string>
    <string name="perfil_reenviar_email">Reenviar email de confirmaçāo</string>
    <string name="perfil_reenviar_email_sucesso">Um novo email foi enviado para confirmação</string>
    <string name="perfil_editar">Editar Perfil</string>
    <string name="perfil_alterar_email">Alterar Email</string>
    <string name="perfil_excluir">Excluir Perfil</string>
    <string name="perfil_sucesso">Salvo com sucesso</string>

    <string name="alterar_email_titulo">Alterar Email</string>
    <string name="alterar_email_et">Novo Email</string>
    <string name="alterar_email_sucesso_titulo">Solicitação enviada</string>
    <string name="alterar_email_sucesso_subtitulo">Você recebera um email para confirmar a alteração</string>

...
